--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,13 @@
+div.ui.fluid.container > .ui.segment {
+  margin: 0 !important;
+  padding-top: 7em !important;
+  padding-bottom: 4em !important;
+}
+
+#uploader-container {
+  padding: 1em !important;
+}
+
 @media only screen and (max-width: 767px) {
   .ui.fluid.container .ui.stackable.top.fixed.menu .right.menu.not-stackable {
     /* background-color: red; */
@@ -15,6 +25,18 @@
     .right.menu.not-stackable
     .item::before {
     content: none;
+  }
+  .ui.fluid.container {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+
+  .ui.stackable.menu {
+    margin-bottom: 0 !important;
+  }
+
+  div.ui.fluid.container > .ui.segment {
+    padding-top: 3em !important;
   }
 }
 
